<resources>
    <string name="app_name">PonderWonder</string>

    <!-- Labels -->
    <string name="labelSignIn">SignIn</string>
    <string name="labelToday">Today</string>
    <string name="labelSchedules">Schedules</string>
    <string name="labelJournal">Journal</string>
    <string name="labelCreateJournal">Create Journal</string>

    <string name="no_schedules_msg">This is the Schedules Screen</string>
    <string name="create_schedule_msg">Create Schedule</string>
    <string name="empty_input_msg">Cannot be empty</string>


    <string name="com_auth0_client_id">YOUR_CLIENT_ID</string>
    <string name="com_auth0_domain">YOUR_DOMAIN</string>
    <string name="sign_out_label">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="sign_up">Sign Up</string>


</resources>
