<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/today">

    <fragment
        android:id="@+id/signIn"
        android:label="@string/labelSignIn"
        android:name="com.example.ponderwonder.SignIn"
        tools:layout="@layout/fragment_sign_in"
        />

    <fragment
        android:id="@+id/today"
        android:label="@string/labelToday"
        android:name="com.example.ponderwonder.Today"
        tools:layout="@layout/fragment_today"
        >

        <argument
            android:name="title"
            android:defaultValue="@string/labelToday"
        />

        <action
            android:id="@+id/openSignInAction"
            app:destination="@id/signIn"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            />

    </fragment>

    <fragment
        android:id="@+id/schedules"
        android:label="@string/labelSchedules"
        android:name="com.example.ponderwonder.schedule.SchedulesView"
        tools:layout="@layout/fragment_schedules"
        />

    <fragment
        android:id="@+id/create_schedule"
        android:label="@string/create_schedule_msg"
        android:name="com.example.ponderwonder.schedule.ScheduleDetails"
        tools:layout="@layout/fragment_schedule_details"/>

    <fragment
        android:id="@+id/journal"
        android:label="@string/labelJournal"
        android:name="com.example.ponderwonder.journal.JournalView"
        tools:layout="@layout/fragment_journal"
        >

        <action
            android:id="@+id/openCreateJournal"
            app:destination="@id/createJournal"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    </fragment>

    <fragment
        android:id="@+id/createJournal"
        android:label="@string/labelCreateJournal"
        android:name="com.example.ponderwonder.journal.CreateJournal"
        tools:layout="@layout/fragment_create_journal">

    </fragment>
</navigation>